# rust_cobia

./: .gitignore  Cargo.toml  LICENSE  README.md
cobia/: Cargo.toml  README.md  build.rs
cobia/cidl2rs/: CMakeLists.txt  cidl2rs.cpp  cidl2rs.rc
cobia/cobia_macro/: Cargo.toml  README.md
cobia/cobia_macro/src/: lib.rs
cobia/src/: cape_array.rs  cape_array_boolean.rs  cape_array_byte.rs  cape_array_enumeration.rs  cape_array_integer.rs  cape_array_object_vec.rs  cape_array_real.rs  cape_array_real_scalar.rs  cape_array_slice.rs  cape_array_string.rs  cape_array_value.rs  cape_array_vec.rs  cape_data_from_provider.rs  cape_data_traits.rs  cape_error.rs  cape_error_impl.rs  cape_object.rs  cape_object_impl.rs  cape_pmc_enumerator.rs  cape_pmc_registration_details.rs  cape_registrar.rs  cape_registry_key.rs  cape_registry_key_writer.rs  cape_registry_writer.rs  cape_result_value.rs  cape_smart_pointer.rs  cape_string_const.rs  cape_string_const_posix.rs  cape_string_const_win32.rs  cape_string_impl.rs  cape_string_impl_posix.rs  cape_string_impl_win32.rs  cape_string_map.rs  cape_string_posix.rs  cape_string_win32.rs  cape_type_library_details.rs  cape_type_library_enumerator.rs  cape_value.rs  cape_value_impl.rs  cape_window_id_posix.rs  (+8 more)
cobia/src/C/: C.c  C.h  c_binding.rs  mod.rs
cobia/src/cape_open/: mod.rs
cobia/src/cape_open_1_2/: mod.rs
examples/distillation_shortcut_unit/: Cargo.toml
examples/distillation_shortcut_unit/src/: distillation_shortcut_unit.rs  integer_parameter.rs  lib.rs  material_port.rs  parameter_collection.rs  port_collection.rs  real_parameter.rs  shared_unit_data.rs  string_parameter.rs
examples/distillation_shortcut_unit/src/gui/: gui.css  gui.html  gui.js  mod.rs
examples/salt_water/: Cargo.toml  build.rs
examples/salt_water/src/: lib.rs  phase_equilibrium_type.rs  property_tables.rs  salt_water_calculator.rs  salt_water_property_package.rs
examples/utils/html_dialog/: Cargo.toml
examples/utils/html_dialog/example/: Cargo.toml
examples/utils/html_dialog/example/src/: main.rs
examples/utils/html_dialog/example/src/user_info/: mod.rs  user_info.css  user_info.html  user_info.js
examples/utils/html_dialog/example/src/user_photo/: mod.rs  user_photo.css  user_photo.html  user_photo.js
examples/utils/html_dialog/html_dialog/: Cargo.toml
examples/utils/html_dialog/html_dialog/src/: browser.rs  browser_edgeview2.rs  browser_process.rs  connection.rs  lib.rs  message_loop.rs  window.rs
