[package]
name = "cobia_macro"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/jvbaten/rust_cobia"
description = "macros for cobia crate"
homepage = "https://www.amsterchem.com/cobiarust.html"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0", features = ["full","parsing","printing"]}
quote = "1.0"
proc-macro2 = "1.0"


