[package]
name = "distillation_shortcut_unit"
version = "0.1.2"
edition = "2024"
build = "build.rs"
license = "MIT"
repository = "https://github.com/jvbaten/rust_cobia"
description = "cobia example: Distillation Short-cut CAPE-OPEN Unit Operation"
homepage = "https://www.amsterchem.com/cobiarust.html"
keywords = ["unit operations", "CAPE OPEN", "shortcut distillation", "chemical engineering", "process simulation"]
documentation = "https://www.amsterchem.com/rust_cobia_doc/distillation_shortcut_unit/"


[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.41"
cobia = { path = "../../cobia"}
json = "0.12.4"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "distillation_shortcut_unit.dll"
FileDescription = "Distillation Shortcut CAPE-OPEN Unit Operation"
ProductVersion = "0.1.2.0"
ProductName = "Salt Water"
LegalCopyright = "Copyright © AmsterCHEM 2025"

[target.'cfg(target_os = "windows")'.dependencies]
html_dialog = { path = "../utils/html_dialog/html_dialog"}
