[package]
name = "html_dialog"
version = "0.1.0"
edition = "2024"

[dependencies]
json = "0.12.4"
log = "0.4.28"

[target.'cfg(target_os = "windows")'.dependencies]
uuid = {version="1.18.1",features = ["v4"]}
registry = "1.3.0"
webview2-com = "0.38.0"
windows = {version = "0.61.3",features = ["Win32_Graphics_Gdi","Win32_Graphics_GdiPlus","Win32_System_LibraryLoader","Win32_System_Registry","Win32_System_Threading","Win32_UI_HiDpi","Win32_UI_Input_KeyboardAndMouse",]}



